<resources>
    <string name="app_name">Lets-green</string>
    <string name="title_home">Home</string>
    <string name="title_catalogue">Catalogue</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="changePassword">Change Password</string>
    <string name="register">Sign Up</string>
    <string name="loginbottom">Sign In</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_card_pollution">MY ROUTES</string>
    <string name="title_card_plant">MY GREENHOUSE</string>
    <string name="name_icon_catalog">catalogue</string>
    <string name="name_icon_home">home</string>
    <string name="name_icon_actions">activities</string>
    <string name="name_icon_settings">settings</string>
    <string name="profile">Profile</string>
    <string name="title">Lets-green</string>
    <string name="password">password</string>
    <string name="repeatPassword">insert password again</string>
    <string name="email">email</string>
    <string name="textViewForgotPassword">Forgot Password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_prova_home">MainActivity</string>
    <string name="title_Login">LOGIN</string>
    <string name="fab_content_desc">plus</string>
    <string name="hsv_content_desc">scroll view</string>
    <string name="plant_name">plant name</string>
    <string name="plant_common_name">plant common name</string>
    <string name="plant_description">plant description</string>
    <string name="co2_absorption">co2 absorption</string>
    <string name="plantimage">plantImage</string>
    <string name="view">View</string>
    <string name="passwordCostraint">insert at least 8 characters</string>
    <string name="generateCarbon">Your Path Generates:</string>
    <string name="co2Generated">Co2 Generated</string>
    <string name="insertTripLenght">Insert Route Length (Km)</string>
    <string name="calculateCo2">Calculate your Co2 Emissions!</string>
    <string name="insertTripName">Insert Route Name</string>
    <string name="addTrip">Add Route to My List</string>
    <string name="insertCarBrand">Insert Your Car Brand!</string>
    <string name="insertCarModel">Insert Your Car Model!</string>
    <string name="selectOrCreateTrip">Select or Create Route</string>
    <string name="createTrip">Create Route</string>
    <string name="numberModels">Number of Models</string>
    <string name="textViewModel">TextView</string>
    <string name="loginRequestedDialogueFragment">Login Requested</string>
    <string name="textDialogueFragment">login is requested to use this functionality</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="changePasswordTitle">Do you want change the password?</string>
    <string name="logoutButton">Logout</string>
    <string name="deleteAccountButton">Delete account</string>
    <string name="buttonResetPassword">Reset password</string>
    <string name="buttonChangeEmail">Change email</string>
    <string name="sendEmailToChangePassword">Send email to change password</string>
    <string name="insertNewEmail">Insert new Email</string>
    <string name="delete_account_alert_title">DELETE ACCOUNT</string>
    <string name="delete_account_alert_message">Are you sure you want to delete your account?</string>
    <string name="insert_new_user_name">Insert new User Name</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="userscore">userScore</string>
    <string name="home">Home</string>
    <string name="numberOfModels">Number of models</string>
    <string name="routes">Routes</string>
    <string name="greenHouse">GreenHouse</string>
    <string name="catalogue">Catalogue</string>
    <string name="plant">Plant</string>
    <string name="insertEmail">Insert email</string>
    <string name="InsertValidEmail">Insert valid email</string>
    <string name="sentEmailToChangePassword">Sent email to change password</string>
    <string name="username">userName</string>
    <string name="pathname">pathName</string>
    <string name="pathlength">pathLength</string>
    <string name="addPlantToGreenhouse">plant added to greenhouse</string>
    <string name="text_greenhouse_default">Explore the catalogue to fill the Greenhouse!</string>
    <string name="deletedRoute">Route deleted</string>
    <string name="hpRemaining"> HP remaining</string>
    <string name="dailyCo2Absorption">Daily Co2 absorption: </string>
    <string name="grams">g</string>
    <string name="logout">Logout done</string>
    <string name="emailChanged">Email changed</string>
    <string name="usernameChanged">Username changed</string>
    <string name="yes">Yes</string>
    <string name="userDeleted">User deleted</string>
    <string name="no">No</string>
    <string name="insertValidPassword">Insert valid password</string>
    <string name="authenticationFailed">Authentication failed</string>
    <string name="loginDone">Login Done</string>
    <string name="addphoto">addPhoto</string>
</resources>